--- a/style.css
+++ b/style.css
@@ -57,22 +57,9 @@ p{
     padding-bottom:25px;
 }
 
-.btn{
-    background-color:var(--Strong-Cyan);
-    color:#fff;
-    height:50px;
-    border-radius:20px;
-    padding-top:13px;
-    font-weight:600;
-}
-.btn-1{
-    background-color:var(--Light-Blue);
-    color:#fff;
-    height:50px;
-    border-radius:20px;
-    padding-top:13px;
-    font-weight:600;
-}
+
+
+
 img{
     display:grid;
     width:100%;
@@ -164,10 +151,12 @@ footer li a:hover{
         background-color: lightgray;
         display:grid;
         grid-template-columns: minmax(150px,1fr) 4fr minmax(170px,1fr); 
-        padding:1.5rem 3rem;
+        padding:1rem 3rem;
         align-items:center;
+        justify-content: center;
     }
     .footer-image{
+        padding-top:3rem;
         width:55px;
 
     }
@@ -175,7 +164,7 @@ footer li a:hover{
         max-width: 500px;
         display:grid;
         grid-template-columns: repeat(3,minmax(120px,120px));
-        grid-gap:20px 70px;
+        grid-gap:0px 70px;
         
     }
     .link li {
@@ -184,6 +173,8 @@ footer li a:hover{
     .link li a{
         color:#5f5e5e;
         font-weight:400;
+        white-space: nowrap;
+        
     }
     .link a:hover{
         color:var(--Strong-Cyan);
@@ -194,7 +185,126 @@ footer li a:hover{
         grid-template-columns: repeat(3,1fr);
         grid-gap:2rem;
     }
+
+    /*clipboard*/
+    .clipboard{
+        display: flex;
+        flex-direction:column;
+    }
+    .clipboard p{
+        padding:0  14rem 2rem 14rem;
+    }
+    .buttons{
+        display:flex;
+        flex-direction: row;
+        text-align: center;
+        justify-content: center;
+        white-space: nowrap;    
+        gap:1rem;  
+    }
+    .btn,
+    .btn-1{
+        padding-left: 25px;
+        padding-right: 25px;
+    }
+    .btn{
+        background-color:var(--Strong-Cyan);
+        color:#fff;
+        height:50px;
+        border-radius:20px;
+        padding-top:13px;
+        font-weight:600;
+        font-size: 1rem;
+        box-shadow: 0 10px 30px -5px var(--Strong-Cyan);
+        
+    }
+    .btn-1{
+        background-color:var(--Light-Blue);
+        color:#fff;
+        height:50px;
+        border-radius:20px;
+        padding-top:13px;
+        font-weight:600;
+        box-shadow: 0 10px 30px -5px var(--Light-Blue);
+    }
+    .company-logos{
+        display:grid;
+        grid-template-columns: repeat(5,1fr);
+    }
+
+    .content-1{
+        display:grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+    .content-1 h1,
+    .content-1 p,
+    .content-1 img{
+        grid-column: 1/-1;
+    }
+    .content-1 img{
+        padding-top:5rem;
+        width:80%;
+        margin:0 auto;
+    }
+    .content-1 p{
+        padding: 0 14rem;
+    }
+
+    .content-2{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        padding-bottom:5rem;
+        padding-left: 6rem;
+        padding-right: 6rem;
+        column-gap: 1rem;
+    }
+    .content-2 h1,
+    .content-2 p{
+        grid-column: 1/-1;
+    }
+    .icon-details img{
+        width:55px;
+    }
+    .icon-details p{
+        font-size: 16px;
+    }
+
+    .sub-main{
+        text-align: center;
+        padding-left:16rem;
+        padding-right:16rem;
+    }
     
+    header{
+        background: url(bg-header-desktop.png);
+    }
+    .buttons-1{
+        display: flex;
+        flex-direction: row;
+        gap:1rem;
+        align-items: center;
+        justify-content: center;
+        
+    }
+    .btn-2{
+        background-color: var(--Strong-Cyan);
+        border-radius:25px;
+        padding:15px 35px;
+        font-weight: 500;
+        color:#fff;
+    }
+    
+    .main p{
+        padding-left:16rem;
+        padding-right:16rem;
+    }
+    
+    
+    
+   
+   
+  
+   
 }
 
 
