--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@
     --Strong-Cyan: hsl(171, 66%, 44%);
     --Light-Blue: hsl(233, 100%, 69%);
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     font-family:var(--font-family);
 }
@@ -327,7 +330,7 @@ footer li a:hover{
         align-items: center;
         row-gap: 1.5rem;
     }
-    
+
     .btn{
         background-color: var(--Strong-Cyan);
         border-radius: 20px;
